<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">


    <ToggleButton
        android:id="@+id/btnGPSPermission"
        android:layout_gravity="end"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textOff="@string/GPSInactive"
        android:textOn="@string/GPSActive"
        android:background="@android:color/white" />
    />

    <ToggleButton
        android:id="@+id/btnGPSOnOff"
        android:layout_gravity="end"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:textOff="@string/enableGPS"
        android:textOn="@string/disableGPS"
        />

    <ToggleButton
        android:id="@+id/btnDistance"
        android:layout_gravity="end"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:textOff="@string/start"
        android:textOn="@string/finish"
        />


    <TextView
        android:id="@+id/textViewparkour"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:textAlignment="center"
        android:textSize="24sp"
        android:elevation="4dp"
        android:gravity="center"/>

    <TextView
        android:id="@+id/textViewDistance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:elevation="4dp"
        android:textAlignment="center"
        android:textSize="24sp"
        android:gravity="center"/>

    <TextView
        android:id="@+id/textViewTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:elevation="4dp"
        android:textAlignment="center"
        android:textSize="24sp"
        android:gravity="center"/>

    <Chronometer
        android:id="@+id/chronometerTimePassed"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="#C8E6C9"
        android:textSize="24sp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/resetButtonId"
        app:layout_constraintStart_toEndOf="@+id/tempPassLabelId"
        app:layout_constraintTop_toBottomOf="@+id/distPercValueId"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="8dp"
        android:gravity="center_horizontal" />

    <ImageView
        android:id="@+id/btnSearch"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tempPassValueId"
        android:layout_marginRight="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        />

    <EditText
        android:id="@+id/inputTextId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/search"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toStartOf="@+id/searchButtonId"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tempPassLabelId"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="8dp" />

    <Button
        android:id="@+id/btnReset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:text="@string/reset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/statusPercursoId" />

</LinearLayout>